[gd_scene load_steps=22 format=2]

[ext_resource path="res://HeartBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Rooms.gd" type="Script" id=4]
[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/health_ui.png" type="Texture" id=5]
[ext_resource path="res://Art/progress bar.png" type="Texture" id=6]
[ext_resource path="res://UI.gd" type="Script" id=7]
[ext_resource path="res://TimerLabel.gd" type="Script" id=8]
[ext_resource path="res://OpenSans.tres" type="Theme" id=9]
[ext_resource path="res://OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Sounds/Sounds und Musik Dario/Hintergrundsmusik - Raum1.mp3" type="AudioStream" id=11]
[ext_resource path="res://Sounds/Sounds und Musik Dario/Hintergrundsmusik 2.1.mp3" type="AudioStream" id=12]
[ext_resource path="res://Sounds/Sounds und Musik Dario/Hintergrundsmusik 2.BOSS.mp3" type="AudioStream" id=13]
[ext_resource path="res://Sounds/Sounds und Musik Dario/Hintergrundsmusik 2.2.mp3" type="AudioStream" id=14]
[ext_resource path="res://ScreenShake.tscn" type="PackedScene" id=15]

[sub_resource type="Animation" id=5]
resource_name = "ItemPickup"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("UI/ItemPickup:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 2.9, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.713726, 0.670588, 0.670588, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="ItemPickupAnimation" type="AnimationPlayer" parent="UI"]
root_node = NodePath("../..")
anims/ItemPickup = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="ItemPickup" type="Label" parent="UI"]
margin_left = 3.0
margin_top = 20.0
margin_right = 474.0
margin_bottom = 52.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 237, 15 )
custom_colors/font_color = Color( 0.196078, 0.278431, 0.356863, 1 )
custom_fonts/font = SubResource( 4 )
text = "Hallo"
align = 1
valign = 1

[node name="HealthBar" type="TextureProgress" parent="UI"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 16.0
value = 23.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.498039, 0.0313726, 0.0313726, 1 )

[node name="Tween" type="Tween" parent="UI/HealthBar"]

[node name="PanelContainer" type="PanelContainer" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -30.0
margin_right = 7.0
margin_bottom = -16.0
grow_horizontal = 2
custom_styles/panel = SubResource( 1 )

[node name="Inventory" type="HBoxContainer" parent="UI/PanelContainer"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 12.0
margin_bottom = 12.0

[node name="HeartBar" parent="UI" instance=ExtResource( 1 )]
margin_left = 7.0
margin_right = 83.0

[node name="TimerLabel" type="RichTextLabel" parent="UI"]
margin_left = 408.0
margin_top = 1.0
margin_right = 493.0
margin_bottom = 35.0
theme = ExtResource( 9 )
custom_colors/default_color = Color( 0.196078, 0.278431, 0.356863, 1 )
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
script = ExtResource( 8 )

[node name="UITimer" type="Timer" parent="UI/TimerLabel"]
wait_time = 0.1
autostart = true

[node name="ActiveItem" type="PanelContainer" parent="UI"]
anchor_left = 0.942
anchor_top = 1.0
anchor_right = 0.942
anchor_bottom = 1.0
margin_left = -15.16
margin_top = -38.0
margin_right = 14.84
margin_bottom = -8.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="UI/ActiveItem"]
margin_left = 7.0
margin_top = 7.0
margin_right = 23.0
margin_bottom = 23.0
rect_min_size = Vector2( 16, 16 )
expand = true
stretch_mode = 6

[node name="ItemNumber" type="Label" parent="UI"]
margin_left = 244.0
margin_top = 223.0
margin_right = 252.0
margin_bottom = 237.0

[node name="Rooms" type="Navigation2D" parent="."]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 133.183, 118.911 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 15 )]

[node name="Hintergrundmusik1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -14.0

[node name="Hintergrundmusik3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -14.0

[node name="Hintergrundmusik2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -14.0

[node name="HintergrundmusikBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -14.0

[connection signal="timeout" from="UI/TimerLabel/UITimer" to="UI/TimerLabel" method="_on_UITimer_timeout"]
[connection signal="hp_changed" from="Player" to="UI" method="_on_Player_hp_changed"]
[connection signal="weapon_droped" from="Player" to="UI" method="_on_Player_weapon_droped"]
[connection signal="weapon_picked_up" from="Player" to="UI" method="_on_Player_weapon_picked_up"]
[connection signal="weapon_switched" from="Player" to="UI" method="_on_Player_weapon_switched"]
